--- a/pages/personal/my.mdx
+++ b/pages/personal/my.mdx
@@ -1,6 +1,9 @@
 # 技术栈
 
-```js filename="demo.js" {3} copy
+```js filename="demo.js" {4,5} copy
 let a = 1;
 console.log(a);
+dwqdwq;
+dwqdwq;
+dwqdwq;
 ```
