--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,9 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# 技术栈
 
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+```js filename="demo.js" {4,5} copy
+let a = 1;
+console.log(a);
+dwqdwq;
+dwqdwq;
+dwqdwq;
+```
