--- a/pages/file/upload.mdx
+++ b/pages/file/upload.mdx
@@ -85,7 +85,7 @@ export default function UploadDemo(props: Upload) {
 }
 ```
 
-![upLoad](/upload/view.png)
+![view](/upload/view.png)
 
 #### 实际使用
 
