--- a/pages/encryption.mdx
+++ b/pages/encryption.mdx
@@ -1,7 +1,7 @@
 # 加密解密
 
-```js filename="使用 forge" {4} copy
-"node-forge": "^1.3.1",
+```js filename="使用 forge" copy
+"node-forge": "1.3.1"
 ```
 
 ## 点击按钮查看控制台打印
